# MLL

./: CMakeLists.txt  README.md
include/MLL/: Data.h  Functions.h  Layer.h  Layers.h  Model.h  Optimizer.h  Optimizers.h
include/MLL/Functions/: ActivFunctions.h  LossFunctions.h  Others.h
include/MLL/Layers/: Activation.h  Convolutional.h  Dense.h  Flatten.h  Pooling.h
include/MLL/Linear/: Matrix.h  Tensor.h  Vector.h
include/MLL/Optimizers/: SGD.h
lib/Debug/: mll-linear-algebra.lib
src/: Activation.cpp  Convolutional.cpp  Data.cpp  Dense.cpp  Flatten.cpp  Functions.cpp  Layers.cpp  Matrix.cpp  Model.cpp  Optimizers.cpp  Pooling.cpp  Tensor.cpp  Vector.cpp
test/: CMakeLists.txt  tests.cpp
